adding color on the paragraphs

--- a/index.html
+++ b/index.html
@@ -253,15 +253,15 @@
             <hr class="my-3 line">
             <div class="row">
                <div class="col-lg-8">
-                  <p>Porto @2024. All rights reserved.</p>
+                  <p class="footer-para">Porto @2024. All rights reserved.</p>
                </div>
                <div class="col-lg-4">
                   <div class="row">
                      <div class="col-lg-4">
-                        <p>Privacy Policy</p>
+                        <p class="footer-para">Privacy Policy</p>
                      </div>
                      <div class="col-lg-4">
-                        <p>Terms of use</p>
+                        <p class="footer-para">Terms of use</p>
                      </div>
                   </div>
                </div>
